--- a/Group_Page/shs.html
+++ b/Group_Page/shs.html
@@ -1,133 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>W3.CSS Template</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/shs.css" />
-    <script src="js/shs.js"></script>
-  </head>
-  <body>
-    <!-- Sidebar/menu -->
-    <nav
-      class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
-      style="z-index: 3; width: 250px; font-weight: bold"
-      id="mySidebar"
-    >
-      <br />
-      <a
-        href="javascript:void(0)"
-        onclick="w3_close()"
-        class="w3-button w3-hide-large w3-display-topleft"
-        style="width: 100%; font-size: 22px"
-        >Close Menu</a
-      >
-      <div class="w3-container">
-        <h3 class="w3-padding-64">
-          <b>1조<br />손송박이</b>
-        </h3>
-      </div>
-      <div class="w3-bar-block">
-        <a
-          href="index.html"
-          onclick="w3_close()"
-          class="w3-bar-item w3-button w3-hover-white"
-          >홈</a
-        >
-        <a
-          href="main.html"
-          onclick="w3_close()"
-          class="w3-bar-item w3-button w3-hover-white"
-          >메인</a
-        >
-        <a
-          href="sma.html"
-          onclick="w3_close()"
-          class="w3-bar-item w3-button w3-hover-white"
-          >손민아</a
-        >
-        <a
-          href="shs.html"
-          onclick="w3_close()"
-          class="w3-bar-item w3-button w3-hover-white"
-          >송하석</a
-        >
-        <a
-          href="psh.html"
-          onclick="w3_close()"
-          class="w3-bar-item w3-button w3-hover-white"
-          >박성환</a
-        >
-        <a
-          href="ljh.html"
-          onclick="w3_close()"
-          class="w3-bar-item w3-button w3-hover-white"
-          >이진호</a
-        >
-      </div>
-    </nav>
 
-    <!-- Top menu on small screens -->
-    <header
-      class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding"
-    >
-      <a
-        href="javascript:void(0)"
-        class="w3-button w3-red w3-margin-right"
-        onclick="w3_open()"
-        >☰</a
-      >
-      <span id="titleName"><b>손송박이</b></span>
-    </header>
+<head>
+  <title>W3.CSS Template</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/shs.css" />
+  <script src="js/shs.js"></script>
 
-    <!-- Overlay effect when opening sidebar on small screens -->
-    <div
-      class="w3-overlay w3-hide-large"
-      onclick="w3_close()"
-      style="cursor: pointer"
-      title="close side menu"
-      id="myOverlay"
-    ></div>
+</head>
 
-    <!-- Services -->
+<body>
+  <!-- Sidebar/menu -->
+  <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
+    style="z-index: 3; width: 250px; font-weight: bold" id="mySidebar">
+    <br />
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
+      style="width: 100%; font-size: 22px">Close Menu</a>
+    <div class="w3-container">
+      <h3 class="w3-padding-64">
+        <b>1조<br />손송박이</b>
+      </h3>
+    </div>
+    <div class="w3-bar-block">
+      <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">홈</a>
+      <a href="main.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">메인</a>
+      <a href="sma.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">손민아</a>
+      <a href="shs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">송하석</a>
+      <a href="psh.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">박성환</a>
+      <a href="ljh.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">이진호</a>
+    </div>
+  </nav>
 
-    <section class="section-about">
-      <div class="cont-about">
-        <div class="slide-container"></div>
-        <div class="info-about">
-          <div class="w3-container" id="services" style="margin-top: 75px">
-            <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa" ic="name">
-              <a href="#"><b>송하석</b></a>
-            </h1>
-            <hr
-              style="width: 50px; border: 5px solid #ffaaaa"
-              class="w3-round"
-            />
+  <!-- Top menu on small screens -->
+  <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+    <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+    <span id="titleName"><b>손송박이</b></span>
+  </header>
+
+  <!-- Overlay effect when opening sidebar on small screens -->
+  <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor: pointer" title="close side menu"
+    id="myOverlay"></div>
+
+  <!-- Services -->
+
+  <section class="section-about">
+    <div class="cont-about">
+      <div class="slide-container"></div>
+      <div class="info-about">
+        <div class="w3-container" id="services" style="margin-top: 75px">
+          <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa" ic="name">
+            <a href="#"><b>송하석</b></a>
+          </h1>
+          <hr style="width: 50px; border: 5px solid #ffaaaa" class="w3-round" />
+        </div>
+        <div class="slide-images">
+          <img src="img/shs/shs.gif" alt="내 사진" class="img-fluid img-thumbnail" />
+        </div>
+        <dl class="txt-about">
+          <div>
+            <h4 class="display-font-weight self con">안녕하세요!</h4>
+            <h4 class="display-font-weight self con">
+              근면성실한 맞춤형 인재를 목표로 하고 있는 개발자입니다.
+            </h4>
           </div>
-          <div class="slide-images">
-            <img
-              src="img/shs/shs.gif"
-              alt="내 사진"
-              class="img-fluid img-thumbnail"
-            />
+          <div>
+            <dt>이름</dt>
+            <dd>송하석</dd>
           </div>
           <dl class="txt-about">
+            <h4 class="display-font-weight self">
+              안녕하세요! 근면성실한 맞춤형 인재를 목표로 하고 있는
+              개발자입니다.
+            </h4>
+            <div>
+              <dt>이름</dt>
+              <dd>송하석</dd>
+            </div>
+
             <div>
               <h4 class="display-font-weight self con">안녕하세요!</h4>
-              <h4 class="display-font-weight self con">
-                근면성실한 맞춤형 인재를 목표로 하고 있는 개발자입니다.
-              </h4>
+              <h4 class="display-font-weight self con">근면성실한 맞춤형 인재를 목표로 하고 있는 개발자입니다.</h4>
             </div>
             <div>
               <dt>이름</dt>
@@ -167,29 +124,32 @@
                 <img src="src/img/icon-heart.png" alt="" />성격
               </button>
             </div>
-          </dl>
-        </div>
       </div>
-    </section>
-    <script>
-      // Script to open and close sidebar
-      function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-        document.getElementById("myOverlay").style.display = "block";
-      }
+      </dl>
+    </div>
+    </div>
+  </section>
 
-      function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-        document.getElementById("myOverlay").style.display = "none";
-      }
+  <script>
+    // Script to open and close sidebar
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+      document.getElementById("myOverlay").style.display = "block";
+    }
 
-      // Modal Image Gallery
-      function onClick(element) {
-        document.getElementById("img01").src = element.src;
-        document.getElementById("modal01").style.display = "block";
-        var captionText = document.getElementById("caption");
-        captionText.innerHTML = element.alt;
-      }
-    </script>
-  </body>
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+      document.getElementById("myOverlay").style.display = "none";
+    }
+
+    // Modal Image Gallery
+    function onClick(element) {
+      document.getElementById("img01").src = element.src;
+      document.getElementById("modal01").style.display = "block";
+      var captionText = document.getElementById("caption");
+      captionText.innerHTML = element.alt;
+    }
+  </script>
+</body>
+
 </html>
