fix: 민아페이지 수정, 메인 링크 추가

--- a/Group_Page/main.html
+++ b/Group_Page/main.html
@@ -197,7 +197,7 @@
               <div class="card-body">
                 <h5 class="card-title">손민아</h5>
                 <div class="iconContainer">
-                  <a href="#">
+                  <a href="https://github.com/minaci1">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -210,7 +210,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="#">
+                  <a href="https://www.instagram.com/minaci_/">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -224,7 +224,9 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="#">
+                  <a
+                    href="https://relic-magpie-e78.notion.site/WebFront-05a8a243b71a42b2bb73e98c5652ab79"
+                  >
                     <div class="customIcon">
                       <svg
                         fill="none"
