--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>W3.CSS Template</title>
+    <title>손민아 자기소개</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -146,7 +146,6 @@
             <div class="cerification">
               <p class="infotitle">Cerification</p>
               <p>정보처리기사</p>
-              <p>정보처리산업기사</p>
               <p>SQLD</p>
               <p>컴퓨터활용 1급</p>
             </div>
