feat(ljh) : 주소 url 추가

--- a/Group_Page/main.html
+++ b/Group_Page/main.html
@@ -332,7 +332,9 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="https://succulent-dime-62e.notion.site/336e976c0235417287f5b3c12db7e85d">
+                  <a
+                    href="https://succulent-dime-62e.notion.site/336e976c0235417287f5b3c12db7e85d"
+                  >
                     <div class="customIcon">
                       <svg
                         fill="none"
@@ -358,7 +360,7 @@
               <div class="card-body">
                 <h5 class="card-title">이진호</h5>
                 <div class="iconContainer">
-                  <a href="#">
+                  <a href="https://github.com/Hogrii">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -371,7 +373,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="#">
+                  <a href="https://www.instagram.com/jinjoojoa/">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -385,7 +387,9 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="#">
+                  <a
+                    href="https://magnificent-result-7d5.notion.site/Dashboard-69d57ffcbf214da5956812602d9c40c9"
+                  >
                     <div class="customIcon">
                       <svg
                         fill="none"
