feat(All) : 개인과제 링크, sns 링크 추가, 새창열기 추가

--- a/Group_Page/ljh.html
+++ b/Group_Page/ljh.html
@@ -109,7 +109,11 @@
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
         <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa">
-          <a href="#"><b>이진호</b></a>
+          <a
+            href="http://192.168.0.172:8091/Group_Homework/map.html"
+            target="blank"
+            ><b>이진호</b></a
+          >
         </h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
