--- a/Group_Page/main.html
+++ b/Group_Page/main.html
@@ -197,7 +197,7 @@
               <div class="card-body">
                 <h5 class="card-title">손민아</h5>
                 <div class="iconContainer">
-                  <a href="https://github.com/minaci1">
+                  <a href="https://github.com/minaci1" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -210,7 +210,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="https://www.instagram.com/minaci_/">
+                  <a href="https://www.instagram.com/minaci_/" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -226,6 +226,7 @@
                   </a>
                   <a
                     href="https://relic-magpie-e78.notion.site/WebFront-05a8a243b71a42b2bb73e98c5652ab79"
+                    target="blank"
                   >
                     <div class="customIcon">
                       <svg
@@ -252,7 +253,7 @@
               <div class="card-body">
                 <h5 class="card-title">송하석</h5>
                 <div class="iconContainer">
-                  <a href="#">
+                  <a href="#" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -265,7 +266,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="#">
+                  <a href="#" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -279,7 +280,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="#">
+                  <a href="#" target="blank">
                     <div class="customIcon">
                       <svg
                         fill="none"
@@ -305,7 +306,7 @@
               <div class="card-body">
                 <h5 class="card-title">박성환</h5>
                 <div class="iconContainer">
-                  <a href="https://github.com/shpark010">
+                  <a href="https://github.com/shpark010" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -318,7 +319,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="https://www.instagram.com/shpark010/">
+                  <a href="https://www.instagram.com/shpark010/" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -334,6 +335,7 @@
                   </a>
                   <a
                     href="https://succulent-dime-62e.notion.site/336e976c0235417287f5b3c12db7e85d"
+                    target="blank"
                   >
                     <div class="customIcon">
                       <svg
@@ -360,7 +362,7 @@
               <div class="card-body">
                 <h5 class="card-title">이진호</h5>
                 <div class="iconContainer">
-                  <a href="https://github.com/Hogrii">
+                  <a href="https://github.com/Hogrii" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -373,7 +375,7 @@
                       </svg>
                     </div>
                   </a>
-                  <a href="https://www.instagram.com/jinjoojoa/">
+                  <a href="https://www.instagram.com/jinjoojoa/" target="blank">
                     <div class="customIcon">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -389,6 +391,7 @@
                   </a>
                   <a
                     href="https://magnificent-result-7d5.notion.site/Dashboard-69d57ffcbf214da5956812602d9c40c9"
+                    target="blank"
                   >
                     <div class="customIcon">
                       <svg
