--- a/Group_Page/sma.html
+++ b/Group_Page/sma.html
@@ -106,7 +106,11 @@
       <!-- Header -->
       <div class="w3-container" style="margin-top: 80px" id="showcase">
         <h1 class="w3-xxxlarge w3-text" style="color: #ffaaaa">
-          <a href="#"><b>손민아</b></a>
+          <a
+            href="http://192.168.0.195:8090/Group_Homework/map.html"
+            target="blank"
+            ><b>손민아</b></a
+          >
         </h1>
         <hr style="width: 50px; border: 5px solid red" class="w3-round" />
       </div>
